--- a/index.html
+++ b/index.html
@@ -801,10 +801,10 @@
                                 火雞肉飯的起源
                             </a>
                         </li>
-                        <!-- 嘉義火雞肉飯地圖 -->
+                        <!-- 嘉義火雞肉飯優選店家 -->
                         <li class="menu-item">
-                            <a href="#" class="menu-item-link" data-external-url="https://www.google.com/maps/d/u/0/viewer?mid=1fHuGwV5KoH2wb9WsWDcUBJjswDFd0fI0&ll=23.473329964007025%2C120.45345908891602&z=16">
-                                嘉義火雞肉飯地圖
+                            <a href="#" class="menu-item-link" data-external-url="https://travel.chiayi.gov.tw/StaticPage/TurkeyRiceRestaurant">
+                                嘉義火雞肉飯優選店家
                             </a>
                         </li>
                         <!-- 嘉義市景點 -->
