--- a/pages/invoice.html
+++ b/pages/invoice.html
@@ -1420,7 +1420,7 @@
             const minutes = String(taipeiTime.getUTCMinutes()).padStart(2, '0');
             const seconds = String(taipeiTime.getUTCSeconds()).padStart(2, '0');
             
-            const timeString = `民國${rocYear}年${month}月${date}日 星期${day} ${hours}:${minutes}:${seconds}`;
+            const timeString = `${rocYear}年${month}月${date}日 星期${day} ${hours}:${minutes}:${seconds}`;
             document.getElementById('currentTime').textContent = timeString;
         }
 
