--- a/index.html
+++ b/index.html
@@ -854,6 +854,19 @@
                         </li>
                     </ul>
                 </div>
+
+                <!-- 討論區區塊 - 新增區塊 -->
+                <div class="menu-section">
+                    <h3 class="menu-section-title">討論區</h3>
+                    <ul class="menu-items">
+                        <!-- 小朋友專用工具討論區連結 -->
+                        <li class="menu-item">
+                            <a href="#" class="menu-item-link" data-external-url="https://line.me/ti/g2/IWii_nhwqKjLpTZxSNThsQeOZmSfOw84dHK4IA?utm_source=invitation&utm_medium=link_copy&utm_campaign=default">
+                                小朋友專用工具討論區
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             
             <!-- 版權資訊 -->
